tests/ui/feature-gates/feature-gate-dispatch-from-dyn-cell.stderr
error[E0307]: invalid `self` parameter type: `Cell<&Self>`
  --> $DIR/feature-gate-dispatch-from-dyn-cell.rs:6:19
   |
LL |     fn cell(self: Cell<&Self>);
   |                   ^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or a type that dereferences to it
   = help: consider changing to `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0307`.
